import mongoose from "mongoose";

const userSchema = new mongoose.Schema({
    username: { type: String, required: true },
    email: { type: String, required: true, unique: true },
    password: { type: String, required: true },
    cpf: { type: String, required: true, unique: true }, 
    preferences: [{ type: String }],
    role: { type: String, enum: ['user', 'admin'], default: 'user' }
});

const User = mongoose.model("User", userSchema);
export default User;